--- a/static/style.css
+++ b/static/style.css
@@ -95,6 +95,9 @@ body {
     font-weight: 500;
     padding: 0 15px;
     font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .upload {
