--- a/static/style.css
+++ b/static/style.css
@@ -65,6 +65,26 @@ body {
     font-size: 14px;
 }
 
+.upload-warning {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    text-align: center;
+    z-index: 1000;
+    display: none; /* 初始状态为隐藏 */
+}
+
+.upload-warning p {
+    margin: 0;
+    font-size: 16px;
+}
+
 .container {
     display: grid;
     gap: 20px;
@@ -169,7 +189,6 @@ body {
     justify-content: center;
     flex-direction: column;
     transition: background-color 0.3s;
-    position: relative;
 }
 
 .upload .content:hover {
@@ -393,19 +412,4 @@ button:active .tooltiptext {
 .select-group select:focus {
     border-color: #409eff;
     box-shadow: 0 0 5px rgba(64, 158, 255, 0.5);
-}
-
-.countdown {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 10px 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
-    font-size: 16px;
-    color: #606266;
-    text-align: center;
-    z-index: 1000;
 }
